Bug 171950 - lost pictures after 'download/delete all' when target dir had same file names
Summary: lost pictures after 'download/delete all' when target dir had same file names
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Import-MainView (other bugs)
Version First Reported In: 0.9.4
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-01 11:41 UTC by Antonio Gonzalez
Modified: 2012-06-27 11:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Gonzalez 2008-10-01 11:41:11 UTC
Version:           0.9.4 (using 3.5.10 "release 23.1" , openSUSE )
Compiler:          Target: x86_64-suse-linux
OS:                Linux (x86_64) release 2.6.25.16-0.1-default

I lost some pictures while attempting to download them from my camera. These were the steps I followed:

1. I selected the option 'Download/delete all' from the corresponding menu in the Camera window.

2. I selected a folder to download the pictures. However, this folder already contained files with the same names as those in the camera (i.e. same names but different pictures). A window popped-up warning me of this fact, and offering alternatives.

3. In the latter window I clicked 'Skip All', as I wanted to select a different folder to download the pictures whose names were duplicated.

4. Thus, the pictures with the clashing names were not downloaded (and thus the already existing files were not overwritten), which is what I was expecting - BUT *all* the pictures in the camera were deleted. Presumably the files in the camera were reported as downloaded when in fact they were not.
Comment 1 Nicolas L. 2009-04-19 01:32:22 UTC
is this bug  still valid for you with digikam 0.10 ?
Comment 2 caulier.gilles 2009-05-25 13:01:16 UTC
SVN commit 972580 by cgilles:

Fix important bug in Camera gui:

- Race condition: Only show delete camera item dialog when all items are really downloaded, to ask confirmation
- Factorize items deletion code to common method to avoid redondant implementation.
- Only delete items which have been downloaded and not only current selection used to perform download.
- If items are skipped during download, take a care about and do not process deletion of.

BUG: 171950



 M  +65 -81    cameraui.cpp  
 M  +3 -0      cameraui.h  
 M  +2 -0      cameraui_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=972580