Fix important bug in Camera gui:

- Race condition: Only show delete camera item dialog when all items are really downloaded, to ask confirmation
- Factorize items deletion code to common method to avoid redondant implementation.
- Only delete items which have been downloaded and not only current selection used to perform download.
- If items are skipped during download, take a care about and do not process deletion of.

BUG: 171950


svn path=/trunk/extragear/graphics/digikam/; revision=972580