utilities/cameragui/cameraui.h
@@ -118,6 +118,9 @@ private:
     void refreshFreeSpace();
     void refreshCollectionFreeSpace();
     void startKdePreviewJob();
+    void deleteItems(bool onlySelected, bool onlyDownloaded);
+    void checkItem4Deletion(CameraIconItem* iconItem, QStringList& folders, QStringList& files,
+                            QStringList& deleteList, QStringList& lockedList);
 
 private Q_SLOTS:
 
